collect(Collectors.toList()) change on toList();